implementing Feign http client

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -28,4 +28,9 @@ spring.rabbitmq.password=guest
 
 management.endpoints.web.exposure.include = mappings
 
+#Enable Logging
+logging.level.com.appdeveloperblog.photoapp.api.users.data.AlbumsServiceClient=DEBUG
+
+feign.hystrix.enabled = true
+
 
