implement zipkin and sleuth into the project

--- a/PhotoAppApiUsers/src/main/resources/application.properties
+++ b/PhotoAppApiUsers/src/main/resources/application.properties
@@ -33,4 +33,12 @@ logging.level.com.appdeveloperblog.photoapp.api.users.data.AlbumsServiceClient=D
 
 feign.hystrix.enabled = true
 
+spring.zipkin.base-url = http://localhost:9411
+# It might be Web, Kafka, RabbitMQ
+spring.zipkin.sender.type=web
+#How much information will be send to zipkin 1=100%, 0.1 = 10%
+spring.sleuth.smapler.probability=1
+
+
+
 
